--- a/desktop.html
+++ b/desktop.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 		<title>codekngswd</title>
 		
-		<link rel="stylesheet" type="text/css" href="css/alternate.css">
+		<link rel="stylesheet" type="text/css" href="css/desktop.css">
 	</head>
 	
 	<body>
@@ -21,5 +21,9 @@
 				<li><a href="lequanlyresume.pdf" class="icon-paper" target="blank"></a></li>
 			</ul>
 		</nav>
+		
+		<p id="footer">
+			© 2017 LeQuan Ly
+		</p>
 	</body>
 </html>
